[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = "A repository for practicing LeetCode problems with Python"
authors = ["Yuta Nakamura <nakamurayuta0204@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
